--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "bdd-cligen",
-  "version": "0.0.2",
-  "description": "",
-  "main": "index.js",
-  "bin": {
-    "bdd-cligen": "index.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "mithrayls <mithray@protonmail.com> (https://mithrayls.github.io/)",
-  "license": "MIT",
-  "dependencies": {
-    "@mithray/logger": "0.0.7",
-    "change-case": "^3.1.0",
-    "commander": "^3.0.1",
-    "read-pkg-up": "^6.0.0"
-  }
+    "name": "@mithray/bdd-cligen",
+    "version": "0.0.1",
+    "description": "",
+    "main": "index.js",
+    "bin": {
+        "bdd-cligen": "index.js"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "mithrayls <mithray@protonmail.com> (https://mithrayls.github.io/)",
+    "license": "MIT",
+    "dependencies": {
+        "@mithray/logger": "0.0.7",
+        "change-case": "^3.1.0",
+        "commander": "^3.0.1",
+        "read-pkg-up": "^6.0.0"
+    }
 }
